Final version HW2
