# specs/openapi.json
@@ -220,6 +220,65 @@
           }
         }
       }
+    },
+    "/user/search": {
+      "post": {
+        "description": "Поиск анкеты по фамилии и имени",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "first_name": {
+                    "type": "string",
+                    "required": true,
+                    "description": "Часть имени для поиска",
+                    "example": "Конст"
+                  },
+                  "second_name": {
+                    "type": "string",
+                    "required": true,
+                    "description": "Часть фамилии для поиска",
+                    "example": "Оси"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Успешные поиск пользователя",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "msg": {
+                      "type": "string",
+                      "example": "Invalid data from request"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
